--- a/lesson-6/formValidate.html
+++ b/lesson-6/formValidate.html
@@ -17,13 +17,21 @@
 
 Ваша задача - написать валидацию. То есть, пользователь заполняет все поля, нажимает на кнопку "Отправить", а вы проверяете все ли поля заполнены корректно.
 Результат вывести в консоль (все хорошо/всё плохо).
+ -->
 
-Список полей:
-Имя (больше 2-х символов и меньше - 40)
-Логин (должен быть заполнен/не пустой)
-Пароль (больше 8-ми символов, должна быть цифра, буква, большая буква)
-Галочка - "Прочитал условия" (должна быть включена)
-Если хоть одно из условий не совпадает, то форма не валидна. -->
+
+  <form class="form">
+    <input class="name" type="text">
+    <input class="login" type="text">
+    <input class="pass" type="password">
+
+    <div>
+      <input type="checkbox" id="readIt" name="readIt">
+      <label for="readIt">Прочитал условия</label>
+    </div>
+
+    <input id="submit" type="submit" value="send">
+  </form>
 
 
   <script src="./formValidate.js"></script>
