done validate form

--- a/lesson-6/formValidate.html
+++ b/lesson-6/formValidate.html
@@ -13,17 +13,21 @@
 
 
   <!-- И ещё практика:
-У вас на странице есть три инпута, чекбокс(галочка) и кнопка "отправить" (итого: пять элементов).
+У вас на странице есть три инпута, 
+чекбокс(галочка) 
+и кнопка "отправить" 
+(итого: пять элементов).
 
-Ваша задача - написать валидацию. То есть, пользователь заполняет все поля, нажимает на кнопку "Отправить", а вы проверяете все ли поля заполнены корректно.
+Ваша задача - написать валидацию. 
+То есть, пользователь заполняет все поля, нажимает на кнопку "Отправить", а вы проверяете все ли поля заполнены корректно.
 Результат вывести в консоль (все хорошо/всё плохо).
  -->
 
 
   <form class="form">
-    <input class="name" type="text">
-    <input class="login" type="text">
-    <input class="pass" type="password">
+    <input class="name" type="text" value="">
+    <input class="login" type="text" value="">
+    <input class="pass" type="password" value="">
 
     <div>
       <input type="checkbox" id="readIt" name="readIt">
