--- a/lesson-7/app-bonus.html
+++ b/lesson-7/app-bonus.html
@@ -10,6 +10,12 @@
 
 <body>
 
+  <div>
+    <article>
+      <p>Lorem ipsum dolor sit amet, odio omnesque ius cu, quo ex atqui antiopam. At detracto menandri eos. Duo in causae viderer, graeci <a href="#">reprehendunt</a> has in. Decore <mark>nemore</mark> philosophia te pro, nobis legere causae ex mei, odio putant mentitum ea ius. Vix nostro deserunt explicari eu.</p>
+    </article>
+  </div>
+
   <ul>
     <li><a href="#">Link1</a></li>
 
