dode table form task #10

--- a/lesson-7/index.html
+++ b/lesson-7/index.html
@@ -6,6 +6,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+
+  <style>
+    table {
+      width: 100%;
+      max-width: 900px;
+      margin: 40px auto;
+      table-layout: fixed;
+      overflow-wrap: break-word;
+      border-collapse: collapse;
+      border-spacing: 0;
+    }
+
+    th:first-of-type {
+      width: 10%;
+    }
+
+    th {
+      width: 30%;
+      border-top: 2px solid #ededed;
+      text-align: left;
+      line-height: 2.5;
+    }
+
+    td {
+      width: 30%;
+      line-height: 2.5;
+      border-top: 2px solid #ededed;
+    }
+
+    tfoot {
+      text-align: right;
+    }
+
+    tfoot td {
+      padding-right: 15%;
+    }
+  </style>
 </head>
 
 <body>
