--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -23,7 +23,9 @@
     </style>
 
     <div class="container mt50">
-      <div id="users"></div>
+      <div class="gallery">
+        <div class="photo"></div>
+      </div>
     </div>
 
     <script src="./app.js"></script>
