--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
-  </head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+</head>
 
-  <body>
+<body>
 
-    <style>
-      .mt50 {
-        margin-top: 50px;
-      }
 
-      #users div {
-        margin-bottom: 8px;
-      }
-    </style>
 
-    <div class="container mt50">
-      <div class="gallery">
-        <div class="photo"></div>
+  <div class="container mt50">
+    <div class="row">
+
+      <div class="col-6">
+        <div class="list"></div>
+      </div>
+
+      <div class="col-6">
+        <div class="gallery"></div>
       </div>
     </div>
 
-    <script src="./app.js"></script>
 
-  </body>
+  </div>
+
+  <script src="./app.js"></script>
+
+</body>
 
 </html>
