--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -12,16 +12,41 @@
 
 <body>
 
+  <style>
+    .mt50 {
+      margin: 50px auto;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none !important;
+    }
+
+    .photoItem {
+      position: relative;
+      padding: 0 30px;
+      margin-bottom: 12px;
+    }
+
+    .photoTitle {
+      display: block;
+    }
+
+    .column {
+      border: 2px solid #666;
+    }
+  </style>
+
 
 
   <div class="container mt50">
     <div class="row">
 
-      <div class="col-6">
+      <div class="col-6 column">
         <div class="list"></div>
       </div>
 
-      <div class="col-6">
+      <div class="col-6 column">
         <div class="gallery"></div>
       </div>
     </div>
