--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -13,6 +13,19 @@
 <body>
 
   <style>
+    body:-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+      background-color: #F5F5F5;
+    }
+
+    body::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    body::-webkit-scrollbar-thumb {
+      background-color: orangered;
+    }
+
     .mt50 {
       margin: 50px auto;
     }
@@ -23,17 +36,28 @@
     }
 
     .photoItem {
-      position: relative;
       padding: 0 30px;
       margin-bottom: 12px;
     }
 
-    .photoTitle {
-      display: block;
+    .column {
+      padding: 10px;
+      border: 2px solid #666;
     }
 
-    .column {
-      border: 2px solid #666;
+    .gallery {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .gallery__item {
+      flex-basis: 30%;
+      margin-bottom: 20px;
+    }
+
+    .gallery__item p {
+      padding: 8px;
     }
   </style>
 
