--- a/lesson-12/index.html
+++ b/lesson-12/index.html
@@ -38,7 +38,7 @@
                 </div>
               </div>
             </div>
-            <div class="row" id="row">
+            <div class="row" >
               <div class="input-field col s12">
                 <input placeholder="Search news" id="search" type="text">
                 <label for="search">Search</label>
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="news-wrap container">
-        <div class="row"></div>
+        <div class="row" id="row"></div>
       </div>
     </main>
 
