--- a/lesson-12/index.html
+++ b/lesson-12/index.html
@@ -38,10 +38,25 @@
                 </div>
               </div>
             </div>
+
             <div class="row" >
               <div class="input-field col s12">
                 <input placeholder="Search news" id="search" type="text">
                 <label for="search">Search</label>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col s12 m6">
+                <div class="input-field col s12">
+                  <select name="sort" id="sort">
+                    <option value="" disabled selected>Sort your news</option>
+                    <option value="relevancy">Relevancy</option>
+                    <option value="popularity">Popularity</option>
+                    <option value="publishedAt">Published At</option>
+                  </select>
+                  <label>Country</label>
+                </div>
               </div>
             </div>
           </form>
