--- a/lesson-15/index.html
+++ b/lesson-15/index.html
@@ -15,7 +15,7 @@
           <div class="progress__filled"></div>
         </div>
         <input id="time" value="0" readonly style="max-width: 25px;text-align: center;">
-        <button class="player__button toggle" title="Toggle Play">►</button>
+        <button class="player__button toggle" title="Toggle Play"></button>
         <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1">
         <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
         <button class="player__button changeTime" data-skip="-10">« 10s</button>
