--- a/lesson-16/src/index.html
+++ b/lesson-16/src/index.html
@@ -19,17 +19,18 @@
                 <a href="#!">three</a>
             </li>
         </ul>
+
         <nav>
             <div class="nav-wrapper">
                 <a href="#!" class="brand-logo">Logo</a>
-                <ul class="right hide-on-med-and-down">
-                    <li>
-                        <a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i>
-                        </a>
-                    </li>
-                </ul>
+
+                <select id="currency">
+                    <option selected value="USD">$ USD</option>
+                    <option value="EUR">Euro</option>
+                </select>
             </div>
         </nav>
+
         <div class="container">
             <div class="row">
                 <div class="col s12 m7">
