--- a/lesson-16/app/index.html
+++ b/lesson-16/app/index.html
@@ -25,12 +25,13 @@
     font-size: 2em;
   }
 
-  ul {
+  /* ul {
     margin: 0;
     padding: 0;
-  }
+  } */
 
-  li {
+  a {
+    display: block;
     width: 100%;
     padding: 15px;
     list-style-type: none;
@@ -42,15 +43,12 @@
     cursor: pointer;
     transition: background-color .3s ease-out;
     font-size: 2em;
-  }
-
-  li:hover {
-    background: #999;
-  }
-
-  a {
     color: inherit;
     text-decoration: none;
+  }
+
+  a:hover {
+    background: #999;
   }
 </style>
 
