--- a/lesson-16/src/index.html
+++ b/lesson-16/src/index.html
@@ -19,18 +19,16 @@
                 <a href="#!">three</a>
             </li>
         </ul>
-
         <nav>
             <div class="nav-wrapper">
                 <a href="#!" class="brand-logo">Logo</a>
 
-                <select id="currency">
-                    <option selected value="USD">$ USD</option>
-                    <option value="EUR">Euro</option>
-                </select>
             </div>
         </nav>
-
+        <select id="currency">
+            <option selected value="USD">$ USD</option>
+            <option value="EUR">€ Euro</option>
+        </select>
         <div class="container">
             <div class="row">
                 <div class="col s12 m7">
@@ -63,10 +61,9 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="tickets"></div>
+            <div class="row">
+                <div class="tickets"></div>
+            </div>
         </div>
     </body>
 </html>
