--- a/lesson-16/src/index.html
+++ b/lesson-16/src/index.html
@@ -1,69 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 
-    </head>
-    <body>
-        <ul id="dropdown1" class="dropdown-content">
-            <li>
-                <a href="#!">one</a>
-            </li>
-            <li>
-                <a href="#!">two</a>
-            </li>
-            <li class="divider"></li>
-            <li>
-                <a href="#!">three</a>
-            </li>
-        </ul>
-        <nav>
-            <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Logo</a>
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
-            </div>
-        </nav>
-        <select id="currency">
-            <option selected value="USD">$ USD</option>
-            <option value="EUR">€ Euro</option>
-        </select>
-        <div class="container">
-            <div class="row">
-                <div class="col s12 m7">
-                    <div class="card">
-                        <div class="card-image">
-                            <span class="card-title">Выберите направление полета</span>
-                        </div>
-                        <div class="card-content">
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input value="" id="city_of_arive" type="text" class="autocomplete validate">
-                                    <label class="active" for="city_of_arive">Город вылета</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input value="" id="city_of_departure" type="text" class="autocomplete validate">
-                                    <label class="active" for="city_of_departure">Город прилета</label>
-                                </div>
-                            </div>
-                            <input type="text" class="datepicker departure">
-                            <input type="text" class="datepicker return">
+</head>
 
-                        </div>
-                        <div class="card-action">
-                            <button class="submit btn waves-effect waves-light" type="submit" name="action">Submit
-                        <i class="material-icons right">send</i>
-                            </button>
-                        </div>
+<body>
+    <!-- <ul id="dropdown1" class="dropdown-content">
+        <li>
+            <a href="#!">one</a>
+        </li>
+        <li>
+            <a href="#!">two</a>
+        </li>
+        <li class="divider"></li>
+        <li>
+            <a href="#!">three</a>
+        </li>
+    </ul> -->
+
+    <nav>
+        <div class="nav-wrapper">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 m10">
+                        <a href="#!" class="brand-logo">Logo</a>
+                    </div>
+                    <div class="col s12 m2">
+                        <select id="currency">
+                            <option selected value="USD">$ USD</option>
+                            <option value="EUR">€ Euro</option>
+                        </select>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="tickets"></div>
+        </div>
+    </nav>
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col s12 m7">
+                <div class="card">
+                    <div class="card-image">
+                        <span class="card-title">Выберите направление полета</span>
+                    </div>
+                    <div class="card-content">
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input value="" id="city_of_arive" type="text" class="autocomplete validate">
+                                <label class="active" for="city_of_arive">Город вылета</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input value="" id="city_of_departure" type="text" class="autocomplete validate">
+                                <label class="active" for="city_of_departure">Город прилета</label>
+                            </div>
+                        </div>
+                        <label class="active" for="departure">Дата вылета</label>
+                        <input type="text" class="datepicker departure">
+                        <label class="active" for="departure">Дата прилета</label>
+                        <input type="text" class="datepicker return">
+
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col s6 m7">
+                            <div class="card-action">
+                                <button class="submit btn waves-effect waves-light" type="submit" name="action">Submit
+                                    <i class="material-icons right">send</i>
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="col s6 m5">
+                            <div class="card-action">
+                                <button class="submit btn waves-effect waves-light" type="submit" name="action">Submit
+                                    <i class="material-icons right">highlight_off</i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
-    </body>
+
+        <div class="row">
+            <div class="tickets"></div>
+        </div>
+    </div>
+</body>
+
 </html>
