--- a/lesson-17-18/index.html
+++ b/lesson-17-18/index.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-  </head>
+<body>
 
-  <body>
+  <div class="wrapper">
+    <div class="title">
+      <p>Invoice</p>
+    </div>
 
-    <script src="./app.js"></script>
+    <div class="actions">
+      <p>Actions</p>
+      <button class="btn">Add new</button>
+    </div>
 
-  </body>
+    <div class="invoices">
+      <p>Invoices</p>
+
+      <table class="table" cellspacing="0">
+        <thead>
+          <tr>
+            <th>Create</th>
+            <th>No</th>
+            <th>Supply</th>
+            <th>Comment</th>
+          </tr>
+        </thead>
+
+        <tbody>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
+
+  <script src="./app.js"></script>
+
+</body>
 
 </html>
